# x-twitter

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/: inputs.sample.json  sample_output.json
scripts/: export_to_csv.py  run_keyword_search.sh  run_username_scrape.sh
src/: main.py
src/clients/: http_client.py  proxy_manager.py
src/config/: logging.conf  settings.example.json
src/extractors/: tweet_parser.py  user_parser.py  utils_time.py
src/outputs/: exporters.py  formatters.py
src/services/: keyword_search_service.py  username_search_service.py  username_timeline_service.py
tests/: test_services.py  test_tweet_parser.py  test_user_parser.py
