[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "x-twitter-scraper"
version = "0.1.0"
description = "X Twitter Tweets & Usernames scraper with CLI entrypoint."
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
  "python-dateutil>=2.8.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]